# arcium-election

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  arcium-idl.json  check-race-condition.bash  create-codama-client.ts  package-lock.json  package.json  run-tests.bash  runme.bash  rust-toolchain.toml  tsconfig.json
.cursor/: rules
.github/workflows/: test.yml
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/election/: Cargo.toml
programs/election/src/: constants.rs  lib.rs
programs/election/src/handlers/: create_poll.rs  init_vote_counters.rs  mod.rs  reveal_result.rs  vote.rs
programs/election/src/state/: poll.rs
programs/voting/src/: error.rs  lib.rs
programs/voting/src/handlers/: create_poll.rs  init_vote_stats.rs  poll.rs  reveal_result.rs  vote.rs
programs/voting/src/state/: events.rs  mod.rs  poll.rs
tests/: election.ts  helpers.ts  solana-kit-helpers.ts  voting.ts
tests/arcium-solana-kit/: arcium-kit-helpers.ts  arcium-upload-circuit.ts  arcium.json  constants.ts  event-listener.ts  helpers.ts  rescue-cipher.ts  upload-circuit.ts
